# diagno

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
app/: __init__.py  data.py  diagnosis.py  i18n.py  main.py  models.py  store.py
data/: seed.json
docs/strategy/: bibliophilist-vs-diagno.md  product-thesis.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  components.tsx  main.tsx  styles.css
frontend/src/lib/: api.ts  format.ts  math.tsx  types.ts
static/: app.js  index.html  styles.css
tests/: test_api_i18n.py  test_diagnosis.py  test_store.py
tools/: watch_wisdom.py  wisdom_compiler.py
wisdom/: q11_sample.md  q12_sample.md  q13_sample.md
