[project]
name = "diagnostic-physics-tutor"
version = "0.1.0"
description = "MVP diagnostic physics tutor system for angular momentum and center of mass"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.30,<1.0",
  "pydantic>=2.7,<3.0",
  "openai>=1.0,<2.0",
  "python-dotenv>=1.0,<2.0",
  "watchdog>=4.0,<5.0",
  "watchfiles>=0.21.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
